<resources>
    <string name="app_name">ExamenSupuestoMartes</string>
    <string name="TextView_Nombre">Nombre</string>
    <string name="TextView_Password">Password</string>
    <string name="Hint_Nombre">Nombre</string>
    <string name="Hint_Contrasena">Contraseña</string>
    <string name="Button_Acceder">ACCEDER</string>
    <string name="TextView_Bienvenido">Bienvenido</string>
    <string name="TextView_SeleccioneZuno">Seleccione un zumo</string>
    <string name="Button_Servir">Servir</string>
    <string name="Button_Volver">Volver</string>
    <string name="TextView_Title">"Los zumos elegidos son: "</string>
    <array name="spZumos">
        <item>Seleccione un zumo</item>
        <item>Zumo de naranja</item>
        <item>Zumo de manzana</item>
        <item>Zumo de piña</item>
        <item>Zumo de melocotón</item>
        <item>Zumo de pera</item>
        <item>Zumo de uva</item>
        <item>Zumo de fresa</item>
        <item>Zumo de plátano</item>
        <item>Zumo de mango</item>
        <item>Zumo de papaya</item>
    </array>
</resources>