<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ZumosActivity">

    <TextView
        android:id="@+id/tv_BienvenidaCamarero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/TextView_Bienvenido"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19" />

    <TextView
        android:id="@+id/tv_SelleccioneZumo"
        android:layout_width="136dp"
        android:layout_height="24dp"
        android:layout_marginStart="32dp"
        android:text="@string/TextView_SeleccioneZuno"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26999998" />

    <Spinner
        android:id="@+id/sp_Zumos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/spZumos"
        app:layout_constraintBottom_toBottomOf="@+id/tv_SelleccioneZumo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/b_Servir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Button_Servir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_Zumos"
        app:layout_constraintVertical_bias="0.13" />

    <Button
        android:id="@+id/b_Volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Button_Volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58000004" />
</androidx.constraintlayout.widget.ConstraintLayout>