<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
<variable
    name="camarero"
    type="com.maraloedev.examensupuestomartes.Camarero" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="667dp"
        android:layout_margin="35dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tv_Nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoText="false"
            android:text="@string/TextView_Nombre"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.36" />

        <EditText
            android:id="@+id/et_Nombre"
            android:layout_width="194dp"
            android:layout_height="49dp"
            android:ems="10"
            android:hint="@string/Hint_Nombre"
            android:inputType="text"
            android:textColorHint="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.42" />

        <TextView
            android:id="@+id/tv_Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TextView_Password"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_Password"
            android:layout_width="192dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/Hint_Contrasena"
            android:inputType="textPassword"
            android:textColorHint="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.564" />

        <Button
            android:id="@+id/b_Entrar"
            android:layout_width="189dp"
            android:layout_height="52dp"
            android:text="@string/Button_Acceder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_Nombre"
            app:layout_constraintVertical_bias="0.35000002" />

        <ImageView
            android:id="@+id/mostrarContrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="284dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.36"
            app:layout_constraintStart_toEndOf="@+id/et_Password"
            app:srcCompat="@drawable/baseline_password_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>